[package]
name = "editdistance"
version = "0.1.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
edition = "2018"

[lib]
name = "editdistance"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.13.1"
numpy = "0.13.0"
ndarray = "0.14.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
