[package]
name = "lcs"
version = "0.1.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
edition = "2018"

[lib]
name = "lcs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.15.1"
numpy = "0.15.1"
ndarray = { version = "0.15.4", features = ["rayon"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
