[package]
name = "lcs"
version = "0.1.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
edition = "2021"

[lib]
name = "lcs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.17.3"
numpy = "0.17.2"
ndarray = { version = "0.15.6", features = ["rayon"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
